--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,55 +11,68 @@
         android:id="@+id/bTest1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="136dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="300dp"
         android:onClick="onClickTest1"
         android:text="Test_Activity1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/bTest2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/twMessagуTest1"
         android:layout_width="0dp"
-        android:layout_height="21dp"
-        android:layout_marginTop="33dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="96dp"
+        android:visibility="gone"
+
+        android:layout_marginBottom="183dp"
         android:minHeight="48dp"
         android:onClick="onClickTest2"
         android:text="TextView"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/bTest2"
-        app:layout_constraintEnd_toEndOf="@+id/bTest1"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/bTest1"
-        app:layout_constraintTop_toBottomOf="@+id/bTest1"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/bTest2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="264dp"
-        android:onClick="onClickTest2"
-        android:text="Test_Activity2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/bTest1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/bTest1"
         app:layout_constraintTop_toBottomOf="@+id/bTest1" />
 
+    <Button
+        android:id="@+id/bTest2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="141dp"
+        android:layout_marginLeft="141dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginRight="144dp"
+        android:layout_marginBottom="300dp"
+        android:onClick="onClickTest2"
+        android:text="Test_Activity2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bTest1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <TextView
         android:id="@+id/twMessagуTest2"
         android:layout_width="0dp"
         android:layout_height="25dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="172dp"
-        android:visibility="gone"
+        android:layout_marginTop="33dp"
 
+        android:visibility="gone"
+        android:layout_marginBottom="172dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/bTest2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/bTest2"
         app:layout_constraintTop_toBottomOf="@+id/bTest2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
