--- a/app/src/main/res/layout/activity_test1.xml
+++ b/app/src/main/res/layout/activity_test1.xml
@@ -8,19 +8,15 @@
 
     <TextView
         android:id="@+id/twMessage"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
+        android:layout_width="209dp"
+        android:layout_height="25dp"
         android:layout_marginStart="149dp"
         android:layout_marginLeft="149dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginRight="149dp"
-        android:text="Test_Activity1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.307" />
+        android:layout_marginTop="200dp"
+        app:layout_constraintEnd_toEndOf="@+id/tw2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/tw2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tw2"
@@ -28,35 +24,33 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="82dp"
         android:layout_marginEnd="102dp"
         android:layout_marginRight="102dp"
-        android:layout_marginBottom="286dp"
+        android:layout_marginBottom="116dp"
         android:ems="10"
         android:hint="Введите ответ"
         android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/twMessage"
-        app:layout_constraintVertical_bias="0.304" />
+        app:layout_constraintTop_toBottomOf="@+id/twMessage" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="145dp"
-        android:layout_marginLeft="145dp"
-        android:layout_marginTop="51dp"
+        android:layout_width="223dp"
+        android:layout_height="46dp"
         android:layout_marginEnd="172dp"
         android:layout_marginRight="172dp"
-        android:layout_marginBottom="187dp"
+        android:layout_marginBottom="220dp"
         android:onClick="onClickBack"
         android:text="Отправить"
+        app:icon="@android:drawable/ic_menu_upload"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tw2" />
+        app:layout_constraintEnd_toEndOf="@id/tw2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/tw2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
